<resources>
    <string name="app_name" translatable="false">GP_Project</string>

    <string name="label_emailpassword">Email/Password Authentication</string>


    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="login">Login…</string>
    <string name="custom_token" translatable="false">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>


    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <!--welcome screen-->
    <string name="welcome">Eagle Cloud App</string>
    <string name="sayWelcome">Welcome</string>
    <string name="description">this is my description</string>
    <string name="building_name">Building name</string>
    <string name="building_status">save</string>
    <string name="reset_password">reset_password</string>
    <string name="mailSent">Email sent..,</string>
    <string name="loadingData">loading data</string>
    <string name="sharedPreferences">com.gmail.abanoubwagih.gp_project.sharedPreferences</string>
    <string name="loginName">LogingName</string>

    <!--SMS-->
    <string name="Firebase_Number">01148525938</string>
    <string name="sms_buildingname">buildingName</string>
    <string name="sms_buildindStatus">buildingStatus</string>
    <string name="sms_buildingDescription">buildingDescription</string>
    <string name="sms_bodyToAnotherActivity">sms_hashMap</string>

    <string name="dataHasBeenStored">dataHasBeenStored</string>
    <string name="dataStored">dataStored</string>
    <string name="isFirstRunbase">isFirstRunbase</string>
    <string name="FIRSTRUN">FIRSTRUN</string>
    <string name="usrObject">usrObject</string>

    <!--tags-->
    <string name="Tag_listadapter">ListAdapter</string>
    <string name="Tag_listActivity">listActivity</string>
    <string name="Tag_launchActivity">launchActivity</string>
    <string name="Tag_RegistrationToken">RegistrationToken</string>
    <string name="Tag_EmailPasswordActivity">EmailPasswordActivity</string>
    <string name="deny_permission">"you not approve so go out  "</string>
    <string name="title_activity_maps">BuildingMap</string>
    <string name="BuildingGPS">BuildingGPS</string>
    <string name="GPSLat">lat</string>
    <string name="GPSLog">lon</string>
    <string name="buildingSafe">safe</string>
    <string name="buildingFire">FIre</string>
    <string name="this_is_your_building">This is your building</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_gps">Turn on GPS</string>
    <string name="pref_description_gps">Locate to street-level(requires more battery plus view of sky)
    </string>

    <string name="pref_title_name">Name</string>
    <string name="pref_default_display_name">abanoub</string>

    <string name="pref_title_address">Address</string>
    <string name="pref_default_display_address">21 al hkim street</string>

    <string name="pref_title_city">City</string>
    <string name="pref_default_display_city">Cairo</string>

    <string name="pref_title_change_password">Change your password</string>
    <string name="pref_default_change_password">********</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Menu_item_setting">setting</string>
    <string name="menu_item_show_map">menu_show_map</string>

    <string name="menu_item_normal">normal</string>
    <string name="menu_item_satellite">satellite</string>
    <string name="menu_item_terrain">terrain</string>
    <string name="menu_item_hybrid">hybrid</string>
    <string name="menu_item_none">None</string>
    <string name="setting_customer_name">setting_customer_name</string>
    <string name="setting_address">setting_address</string>
    <string name="setting_city">setting_city</string>
    <string name="setting_change_password">setting_change_password</string>
    <string name="setting_gps_switch">setting_gps_switch</string>
</resources>
