<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="@string/setting_customer_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_address"
        android:inputType="textCapWords"
        android:key="@string/setting_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_address" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_city"
        android:inputType="textCapWords"
        android:key="@string/setting_city"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_city" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_change_password"
        android:inputType="textCapWords"
        android:key="@string/setting_change_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_change_password" />

</PreferenceScreen>
