<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.abanoubwagih.gp_project.BuildingHandle.BuildingDetailsActivty">

    <TextView
        android:id="@+id/buildingName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/building_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/buildingStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buildingName"
        android:gravity="center"
        android:text="@string/building_status"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/buildingImage"
        android:layout_below="@+id/buildingStatus"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="16sp" />

    </ScrollView>

    <ImageView
        android:id="@+id/buildingImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/buling1" />

</RelativeLayout>
